feat(webp): decode ICC profile from container and apply if needed